Changes since version 2.0.0
---------------------------

- Fixed incorrect logging message if no more endpoints are available
  for retry.

- Added setDefaultContext() and getDefaultContext() to the
  Ice::Communicator interface. This allows a default context to be
  established on a communicator-wide basis. See section 29.8.3 in the
  doc.

  Added ice_defaultContext to Ice::ObjectProxy. This creates a new
  proxy that uses the default context established on the communicator.

- Fixed a rare proxy marshaling bug that could cause the receiver to
  encounter an UnmarshalOutOfBoundsException.

- Overloaded the checkedCast member function of the generated Prx
  classes to allow a trailing argument of type ::Ice::Context. This
  makes it possible to do stateful things that require a context in a
  servant locator's activate() method.

- Added catalogs for Freeze: each database environment used by Freeze
  now contains a special dictionary (named __catalog) that keeps track
  of all evictor and dictionary databases in this environment.

- Fixed a bug in slice2cs and slice2vb: incorrect code was generated
  if an interface was derived from a base interface in a different
  module and if the base interface contained an AMD operation.

- Changed IceUtil::GCShared to derive from IceUtil::Shared.
  (Previously, these two classes were unrelated.) This change allows
  servants to be derived from IceUtil::Thread, which was impossible
  previously.

Changes since version 1.5.1
---------------------------

- Fixed a bug in IcePack which could cause a core dump of the IcePack
  registry or node when updating an application deployment.

- The proxy returned by the object adapter operations addFacet and
  addFacetWithUUID did not contain the facet. This required the
  application to make an extra call to ice_newFacet in order to
  obtain the correct proxy. This has been fixed.

- Added the object adapter property <name>.PublishedEndpoints, which